<resources>
    <string name="app_name">Yasha</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_email">Email or Username</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="policy_login">By clicking “Log In” you accept Yasha\'s</string>
    <string name="policy_register">By clicking “Register” you accept Yasha\'s</string>
    <string name="title_activity_comment">Comments</string>
    <string name="comment">Type a message…</string>
    <string name="title_activity_post">My post</string>
    <string name="title_activity_history">My history</string>

    <string name="title_section1">Posts</string>
    <string name="title_section2">Feedback</string>
    <string name="title_section3">Comments</string>

    <string name="title_activity_register">New account</string>
    <string name="register">Register</string>
    <string name="title_activity_search">Search query</string>
    <string name="title_activity_settings">Settings</string>
    <string name="testimony">Category testimony</string>
    <string name="encouragement">Category encouragement</string>
    <string name="other">Category other</string>
    <string name="confession">Category confession</string>
    <string name="send">Send</string>
    <string name="post">Post</string>
    <string name="no_geocoder_available">Geocoder service not available</string>
    <string name="invalid_lat_long_used">Invalid lat long used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="search_hint">Search users...</string>
    <string name="terms"><u>terms of service</u></string>
    <string name="policy"><u>privacy policy</u></string>
    <string name="title_activity_agreement">AgreementActivity</string>
</resources>
